--- a/unit_test/README
+++ b/unit_test/README
@@ -1,5 +1,7 @@
 Useful unit test code
 
+Check out the Math/Geometry project for a use of the unit test code
+
 Colors.h/.cpp : Useful functions which will modify the console terminal color. This can create colorful output which allows rapid viewing of pass/fail conditions.
 
 Logger.h/.cpp : A log container which will store unit test results until all tests have completed. Useful for storing intermediate results rather than crash the results.
