--- a/geographic/docs/user_guide/user_guide.tex
+++ b/geographic/docs/user_guide/user_guide.tex
@@ -87,4 +87,16 @@ g++ hello_world.cpp -I/opt/local/include -L/opt/local/lib -lgeoimage
 \label{fig:basic02}
 \end{figure}
 
+
+
+\section*{API Reference}
+
+\begin{figure}[!h]
+\begin{lstlisting}
+GeoImage( const string& image_filename = "_NO_IMAGE_SELECTED_", const bool& initialize = false );
+\end{lstlisting}
+\caption{Constructor for the GeoImage Object}
+\label{fig:geoimage01}
+\end{figure}
+
 \end{document}
