fixed some tacid functions and beefing up examples

--- a/geographic/src/GeoImage.dox
+++ b/geographic/src/GeoImage.dox
@@ -10,6 +10,9 @@ The library is divided into several modules:
 - DEM 
     -# Provides tools for Digital Elevation Model File IO.
     -# Allows Read Only.  Build GeoImage for output.
+- Extensions
+	-# TACID
+	  -# TACID Parsing for GS2
 - Utilities
     
 */
