--- a/geographic/docs/notes/PhotogrammetryNotes.tex
+++ b/geographic/docs/notes/PhotogrammetryNotes.tex
@@ -1,9 +1,45 @@
+%  File:   PhotogrammetryNotes.tex
+%  Author: Marvin Smith
+%
+%
+% Start of Photogrammetry Notes
 \documentclass[12pt]{report}
 
+% Relevant packages required
+\usepackage{cite}
+\usepackage{graphicx}
+\usepackage{makeidx}
+\usepackage{hyperref}
+\usepackage{xcolor}
+
+\definecolor{dark-red}{rgb}{0.4,0.15,0.15}
+\definecolor{dark-blue}{rgb}{0.15,0.15,0.4}
+\definecolor{medium-blue}{rgb}{0,0,0.5}
+\hypersetup{
+    colorlinks, linkcolor={dark-red},
+    citecolor={dark-blue}, urlcolor={medium-blue}
+}
 
 
+\makeindex
+
+% Title page information
+\title{Photogrammetry Notes and Observations}
+\author{Marvin Smith}
+\date{\today}
+
+% Start processing document commands
 \begin{document}
 
+% Create the title page
+\maketitle
+
+% Create the table of contents
+\tableofcontents
+
+
+% This is a table with some relevant terminology
+\addcontentsline{toc}{section}{Common Terminology}
 \section*{Common Terminology}
 
 \begin{description}
@@ -11,15 +47,39 @@
                           This involves measuring the exact location of the image center as well as 
                           the camera angle.  This is followed by the computation of the camera calibration 
                           parameters to remove camera and lens distortions.  Finally, you may terrain
-                          induced distortions using DEM data. 
+                          induced distortions using DEM data. \index{Orthorectification}
+
+\item[Georectification] A method of stretching and warping an image to align with another map projectin or spatial 
+                        data in GIS.  This is comparable to Google Earth and other systems which implement overlays. 
+                        If an image is rectified, Ground Control Points (GCP) can be used to create a transformation which 
+                        aligns one image to the GIS data.  This is different from orthorectification as well because
+                        it is assumed that the image is already orthorectified. Georectification just changes the 
+                        projection and/or coordinate system. \index{Georectification}
+
+\item[Georeference]     Same as Georectification \index{Georectification} \index{Georeference}.
 \end{description}
 
+
+% These are some relevant variables and associated images
+\addcontentsline{toc}{section}{Common Variables}
 \section*{Common Variables}
 
 \begin{itemize}
 \item $H$ - Height of the camera above ground, \emph{Flying Height}
 \item $B$ - Distance between two image, \emph{Air Base}
 \end{itemize}
+
+
+% Bibliography
+\addcontentsline{toc}{section}{Bibliography and useful resources}
+\bibliography{PhotogrammetryNotes}
+\bibliographystyle{plain}
+\nocite{*}
+
+% Table of contents
+\addcontentsline{toc}{section}{Index}
+\printindex
+
 
 \end{document}
 
