--- a/geographic/docs/notes/PhotogrammetryNotes.tex
+++ b/geographic/docs/notes/PhotogrammetryNotes.tex
@@ -6,6 +6,7 @@
 \documentclass[12pt]{report}
 
 % Relevant packages required
+\usepackage{fullpage}
 \usepackage{cite}
 \usepackage{graphicx}
 \usepackage{makeidx}
@@ -36,7 +37,7 @@
 
 % Create the table of contents
 \tableofcontents
-
+\clearpage
 
 % This is a table with some relevant terminology
 \addcontentsline{toc}{section}{Common Terminology}
@@ -49,14 +50,27 @@
                           parameters to remove camera and lens distortions.  Finally, you may terrain
                           induced distortions using DEM data. \index{Orthorectification}
 
-\item[Georectification] A method of stretching and warping an image to align with another map projectin or spatial 
-                        data in GIS.  This is comparable to Google Earth and other systems which implement overlays. 
-                        If an image is rectified, Ground Control Points (GCP) can be used to create a transformation which 
-                        aligns one image to the GIS data.  This is different from orthorectification as well because
-                        it is assumed that the image is already orthorectified. Georectification just changes the 
-                        projection and/or coordinate system. \index{Georectification}
+\item[Georectification]   A method of stretching and warping an image to align with another map projectin or spatial 
+                          data in GIS.  This is comparable to Google Earth and other systems which implement overlays. 
+                          If an image is rectified, Ground Control Points (GCP) can be used to create a transformation which 
+                          aligns one image to the GIS data.  This is different from orthorectification as well because
+                          it is assumed that the image is already orthorectified. Georectification just changes the 
+                          projection and/or coordinate system. \index{Georectification}
 
-\item[Georeference]     Same as Georectification \index{Georectification} \index{Georeference}.
+\item[Georeference]       Same as Georectification \index{Georectification} \index{Georeference}.
+
+\item[Aerotriangulation]  The process of assigning ground control values to points on a block of photographs
+                          by determining the relationship between the photographs and known ground control 
+                          points.
+
+\item[Bundle Adjustment]  The process of simulaneously refining 3D coordinates derived from multiple viewpoints.  
+                          This requires that the user has multiple 3d coordinates measured from multiple image
+                          pairs. This is often solved with Levenberg-Marquardt. 
+
+\item[Boresight] Boresight is the physical mounting angles between an IMU and a digital camera. Basically, if the IMU
+                 defines a flight axis,  the Boresight defines the angles from the axis of which the camera is pointing. 
+
+
 \end{description}
 
 
@@ -68,6 +82,14 @@
 \item $H$ - Height of the camera above ground, \emph{Flying Height}
 \item $B$ - Distance between two image, \emph{Air Base}
 \end{itemize}
+
+
+\addcontentsline{toc}{section}{Orthorectification}
+\section*{Orthorectification}
+
+
+
+
 
 
 % Bibliography
