adding GDAL to Script

--- a/geographic/docs/notes/PhotogrammetryNotes.tex
+++ b/geographic/docs/notes/PhotogrammetryNotes.tex
@@ -55,8 +55,8 @@
 \end{itemize}
 
 
-\addcontentsline{toc}{chapter}{Orthorectification}
-\chapter*{Orthorectification}
+% Common Programs and Usage
+\include{CommonProgramsAndUsage}
 
 
 % Glossary
