adding section on camera calibration

--- a/geographic/docs/notes/PhotogrammetryNotes.tex
+++ b/geographic/docs/notes/PhotogrammetryNotes.tex
@@ -58,6 +58,8 @@
 % Common Programs and Usage
 \include{CommonProgramsAndUsage}
 
+% Camera Calibration Notes
+\include{CameraCalibration}
 
 % Glossary
 \glsaddall
