added focal length to glossary

--- a/geographic/docs/notes/glossary.tex
+++ b/geographic/docs/notes/glossary.tex
@@ -44,4 +44,11 @@
 }
 
 
+\newglossaryentry{Focal Length}{
+    name={Focal Length},
+    description={  The distance between the focal point and the image plane. This is relevant as the focal length determines
+                   attributes such as the clarity of the image and the depth of field.  It is an essential part of camera 
+                   calibration.}
+}
+
 
