added install instructions for gdal binaries

--- a/geographic/docs/notes/CommonProgramsAndUsage.tex
+++ b/geographic/docs/notes/CommonProgramsAndUsage.tex
@@ -5,6 +5,12 @@ This section is dedicated to solving easy problems using common programs.
 \addcontentsline{toc}{section}{GDAL Binaries}
 \section*{GDAL Binaries}
 
+Many of the included gdal programs can be installed using a package manager. 
+
+\begin{description}
+\item[Ubuntu] sudo apt-get install gdal-bin
+\end{description}
+
 \addcontentsline{toc}{subsection}{gdalinfo}
 \subsection*{gdalinfo}
 
@@ -14,7 +20,7 @@ particular geographic file to the console. \index{GDAL} \index{GDAL!gdalinfo}
 
 This application works on elevation information, vector files (KML, KMZ), imagery (NITF), and many more. 
 
-\textbf{ Information Provided}
+\noindent\textbf{ Information Provided}
 \begin{itemize}
 \item Corner Coordinates
 \item Geographic Projection Used
