--- a/geographic/docs/notes/PhotogrammetryNotes.tex
+++ b/geographic/docs/notes/PhotogrammetryNotes.tex
@@ -13,6 +13,7 @@
 \usepackage{xcolor}
 \usepackage[xindy,toc]{glossaries}
 \usepackage{makeidx}
+\usepackage{subfig}
 
 \definecolor{dark-red}{rgb}{0.4,0.15,0.15}
 \definecolor{dark-blue}{rgb}{0.15,0.15,0.4}
