added some elementary support for parsing the GS2 TREs

--- a/geographic/docs/notes/CommonProgramsAndUsage.tex
+++ b/geographic/docs/notes/CommonProgramsAndUsage.tex
@@ -104,6 +104,7 @@ gdaldem hillshade  data/dted/w118/n36.dt2 output.tif -s 100000 -z 5
 For more information, see manual pages and \url{http://developmentseed.org/blog/2009/jul/30/using-open-source-tools-make-elevation-maps-afghanistan-and-pakistan/}
 
 \begin{figure}[!h]
+\centering
 \subfloat[Color Relief Results]{\includegraphics[width=3.5in]{images/color_output.png}}
 \subfloat[Hillshade Relief Results]{\includegraphics[width=3.5in]{images/hillshade_output.png}}\\
 \subfloat[Merged Results]{\includegraphics[width=3.5in]{images/merged_output.png}}
