Adding orthorectification module

--- a/geographic/docs/notes/PhotogrammetryNotes.tex
+++ b/geographic/docs/notes/PhotogrammetryNotes.tex
@@ -62,6 +62,9 @@
 % Camera Calibration Notes
 \include{CameraCalibration}
 
+% Orthorectification Notes
+\include{Orthorectification}
+
 % Glossary
 \glsaddall
 \printglossary
