--- a/geographic/test/TODO
+++ b/geographic/test/TODO
@@ -1,3 +1,5 @@
 - Make DEM Model Loseless or read text file instead
 - Incorporate logger
 - Organize configuration
+- Add progress bar
+- Add command-line options
