--- a/README
+++ b/README
@@ -6,9 +6,6 @@ use and deploy in a general sense.
 Feel free to use any code which you find in this repo.  I ask that you send me any
 improvements or modifications so that I can potentially add them permanently. 
 
-For notes on theory or implementation of this code, visit my OneNote binder at
-https://skydrive.live.com/redir.aspx?cid=2efc5dd61ba698a5&resid=2EFC5DD61BA698A5!149&parid=2EFC5DD61BA698A5!104&authkey=!AG-cKaRfyKMQUNY
-
 Project Structure
 - Code_Sandbox
    
@@ -25,6 +22,9 @@ Project Structure
    - Geographic : A collection of geographic utilities
      
       - GeoImage - a Geographic image utility
+      - OrthoProject - an Orthorectification library
+
+    - Useful stuff - some general code
 
    - OpenCV : A collection of OpenCV utilities
 
