--- a/geographic/geo_notes/PhotogrammetryNotes.tex
+++ b/geographic/geo_notes/PhotogrammetryNotes.tex
@@ -14,6 +14,7 @@
 \usepackage[xindy,toc]{glossaries}
 \usepackage{makeidx}
 \usepackage{subfig}
+\usepackage{amsmath}
 
 \definecolor{dark-red}{rgb}{0.4,0.15,0.15}
 \definecolor{dark-blue}{rgb}{0.15,0.15,0.4}
