updated documentation.  need to keep plugging away

--- a/geographic/geo_notes/Orthorectification.tex
+++ b/geographic/geo_notes/Orthorectification.tex
@@ -120,4 +120,7 @@ GSD for the Y is the same except column heights. The final GSD is the smaller of
 scale the image down and not lose data. 
 
  
+\subsection*{Iterate over image}
+\addcontentsline{toc}{subsection}{Iterate over image}
+
 
