fixing photogrammetry notes

--- a/geographic/geo_notes/Orthorectification.tex
+++ b/geographic/geo_notes/Orthorectification.tex
@@ -187,3 +187,12 @@ R^{-1}_{\textup{quat}} \cdot \begin{bmatrix}
 Where $F$ is the dimensions of the focal plane, $\textup{img}$ are the dimensions of the input image, and $P_\textup{prin}$ is the principle point.
 
 
+\subsection*{Digital Elevation Model Correction}
+\addcontentsline{toc}{subsection}{Digital Elevation Model Correction}
+
+In order to fix the occlusions caused by the perspective view, it is necessary to search and 
+compute all points on the dem which intersect the line from the camera origin and the world
+point.
+
+
+
