--- a/c++/boost/notes/notes.tex
+++ b/c++/boost/notes/notes.tex
@@ -15,7 +15,7 @@ compiler console.
 bootstrap.bat
 
 #  Build the entire library
-bjam.exe  --toolset=msvc --build-type=complete --build-dir=C:\opt\local
+bjam.exe  --toolset=msvc --build-type=complete stage
 \end{verbatim}
 
 
