--- a/c++/boost/build_instructions.tex
+++ b/c++/boost/build_instructions.tex
@@ -15,7 +15,7 @@ compiler console.
 bootstrap.bat
 
 #  Build the entire library
-bjam.exe  --toolset=msvc --build-type=complete --build-dir=C:\opt\local
+b2.exe --toolset=msvc-11.0 --build-type=complete architecture=x86 address-model=64 stage
 \end{verbatim}
 
 
